Bootstrap layout before doing javascript

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 <body>
 
-    <div class="jumbotron jumbotron-fluid" style="margin: 3em">
-        <h1 class="display-4" style="text-align: center">Rock/Paper/Scissors Multiplayer</h1></br>
+    <div class="jumbotron jumbotron-fluid" style="margin: 2em">
+        <h1 class="display" style="text-align: center">Rock.Paper.Scissors Online</h1></br>
         <div class="row justify-content-around" style="text-align: center">
             <div class="col-5">
                 <div class="card">
