--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Rock Paper Scissors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
 
 <body>
 
-    <div class="jumbotron jumbotron-fluid" style="margin: 2em">
+    <div class="jumbotron jumbotron-fluid">
         <h1 class="display" style="text-align: center">Rock.Paper.Scissors Online</h1></br>
         <div class="row justify-content-around" style="text-align: center">
             <div class="col-5">
