--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <div class="jumbotron jumbotron-fluid">
-        <h1 class="display" style="text-align: center">Rock.Paper.Scissors Online</h1></br>
+        <h1 class="display-6" style="text-align: center">Rock.Paper.Scissors Online</h1></br>
         <div class="row justify-content-around" style="text-align: center">
             <div class="col-5">
                 <div class="card">
