--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body>
 
     <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-6" style="text-align: center">Rock.Paper.Scissors Online</h1></br>
+        <h2 class="title" style="text-align: center">Rock Paper Scissors Online</h1></br>
         <div class="row justify-content-around" style="text-align: center">
-            <div class="col-5">
+            <div class="col-6">
                 <div class="card">
                     <img id="p1Image" class="card-img-top" src="assets/images/rpsStock.png" alt="Card image cap">
                     <div class="card-body">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-6">
                 <div class="card">
                     <img id="p2Image" class="card-img-top" src="assets/images/rpsStock.png" alt="Card image cap">
                     <div class="card-body">
