--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 align-content-center">
                 <div class="card">
                     <img id="p2Image" class="card-img-top" src="assets/images/rpsStock.png" alt="Card image cap">
                     <div class="card-body">
