--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <div class="jumbotron jumbotron-fluid">
         <h2 class="title" style="text-align: center">Rock Paper Scissors Online</h1></br>
+            <p id="connected-viewers">Connected Users:</p>
         <div class="row justify-content-around" style="text-align: center">
             <div class="col-6">
                 <div class="card">
